# web2features

./: .gitignore  Dockerfile  LLM_registry_scraper.py  README.md  app.py  company_website_scraper.py  extractor.py  llm_client.py  logger.py  main.py  news_scraper.py  pyproject.toml  regex_registry_scraper.py  registry_scraper.py  scraper.py  sitemap_scraper.py
templates/: index.html
unit_tests/: test_news_scraper.py
