[project]
name = "web2features"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.14.0",
    "flask>=3.1.3",
    "huggingface-hub>=1.7.2",
    "lxml>=6.0.2",
    "ollama>=0.6.1",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]
